--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,22 @@
     <artifactId>nettyRPC</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <netty.version>4.1.45.Final</netty.version>
+        <slf4j.version>1.7.30</slf4j.version>
+    </properties>
     <modules>
         <module>rpc-core</module>
         <module>rpc-common</module>
     </modules>
 
+    <dependencies>
+<!--        log  -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
